# serializer version: 1
# name: test_react_agent_graph_structure[None-None-None-None-None-tools0]
  '''
  graph TD;
  	__start__ --> agent;
  	agent --> __end__;
  
  '''
# ---
# name: test_react_agent_graph_structure[None-None-None-None-None-tools1]
  '''
  graph TD;
  	__start__ --> agent;
  	agent -.-> __end__;
  	agent -.-> tools;
  	tools --> agent;
  
  '''
# ---
# name: test_react_agent_graph_structure[None-None-None-None-pre_model_hook-tools0]
  '''
  graph TD;
  	__start__ --> pre_model_hook;
  	pre_model_hook --> agent;
  	agent --> __end__;
  
  '''
# ---
# name: test_react_agent_graph_structure[None-None-None-None-pre_model_hook-tools1]
  '''
  graph TD;
  	__start__ --> pre_model_hook;
  	agent -.-> __end__;
  	agent -.-> tools;
  	pre_model_hook --> agent;
  	tools --> pre_model_hook;
  
  '''
# ---
# name: test_react_agent_graph_structure[None-None-None-post_model_hook-None-tools0]
  '''
  graph TD;
  	__start__ --> agent;
  	agent --> post_model_hook;
  	post_model_hook --> __end__;
  
  '''
# ---
# name: test_react_agent_graph_structure[None-None-None-post_model_hook-None-tools1]
  '''
  graph TD;
  	__start__ --> agent;
  	agent --> post_model_hook;
  	post_model_hook -.-> __end__;
  	post_model_hook -.-> agent;
  	post_model_hook -.-> tools;
  	tools --> agent;
  
  '''
# ---
# name: test_react_agent_graph_structure[None-None-None-post_model_hook-pre_model_hook-tools0]
  '''
  graph TD;
  	__start__ --> pre_model_hook;
  	agent --> post_model_hook;
  	pre_model_hook --> agent;
  	post_model_hook --> __end__;
  
  '''
# ---
# name: test_react_agent_graph_structure[None-None-None-post_model_hook-pre_model_hook-tools1]
  '''
  graph TD;
  	__start__ --> pre_model_hook;
  	agent --> post_model_hook;
  	post_model_hook -.-> __end__;
  	post_model_hook -.-> pre_model_hook;
  	post_model_hook -.-> tools;
  	pre_model_hook --> agent;
  	tools --> pre_model_hook;
  
  '''
# ---
# name: test_react_agent_graph_structure[None-None-pre_structured_response_hook-None-None-tools0]
  '''
  graph TD;
  	__start__ --> agent;
  	agent --> __end__;
  
  '''
# ---
# name: test_react_agent_graph_structure[None-None-pre_structured_response_hook-None-None-tools1]
  '''
  graph TD;
  	__start__ --> agent;
  	agent -.-> __end__;
  	agent -.-> tools;
  	tools --> agent;
  
  '''
# ---
# name: test_react_agent_graph_structure[None-None-pre_structured_response_hook-None-pre_model_hook-tools0]
  '''
  graph TD;
  	__start__ --> pre_model_hook;
  	pre_model_hook --> agent;
  	agent --> __end__;
  
  '''
# ---
# name: test_react_agent_graph_structure[None-None-pre_structured_response_hook-None-pre_model_hook-tools1]
  '''
  graph TD;
  	__start__ --> pre_model_hook;
  	agent -.-> __end__;
  	agent -.-> tools;
  	pre_model_hook --> agent;
  	tools --> pre_model_hook;
  
  '''
# ---
# name: test_react_agent_graph_structure[None-None-pre_structured_response_hook-post_model_hook-None-tools0]
  '''
  graph TD;
  	__start__ --> agent;
  	agent --> post_model_hook;
  	post_model_hook --> __end__;
  
  '''
# ---
# name: test_react_agent_graph_structure[None-None-pre_structured_response_hook-post_model_hook-None-tools1]
  '''
  graph TD;
  	__start__ --> agent;
  	agent --> post_model_hook;
  	post_model_hook -.-> __end__;
  	post_model_hook -.-> agent;
  	post_model_hook -.-> tools;
  	tools --> agent;
  
  '''
# ---
# name: test_react_agent_graph_structure[None-None-pre_structured_response_hook-post_model_hook-pre_model_hook-tools0]
  '''
  graph TD;
  	__start__ --> pre_model_hook;
  	agent --> post_model_hook;
  	pre_model_hook --> agent;
  	post_model_hook --> __end__;
  
  '''
# ---
# name: test_react_agent_graph_structure[None-None-pre_structured_response_hook-post_model_hook-pre_model_hook-tools1]
  '''
  graph TD;
  	__start__ --> pre_model_hook;
  	agent --> post_model_hook;
  	post_model_hook -.-> __end__;
  	post_model_hook -.-> pre_model_hook;
  	post_model_hook -.-> tools;
  	pre_model_hook --> agent;
  	tools --> pre_model_hook;
  
  '''
# ---
# name: test_react_agent_graph_structure[None-post_structured_response_hook-None-None-None-tools0]
  '''
  graph TD;
  	__start__ --> agent;
  	agent --> __end__;
  
  '''
# ---
# name: test_react_agent_graph_structure[None-post_structured_response_hook-None-None-None-tools1]
  '''
  graph TD;
  	__start__ --> agent;
  	agent -.-> __end__;
  	agent -.-> tools;
  	tools --> agent;
  
  '''
# ---
# name: test_react_agent_graph_structure[None-post_structured_response_hook-None-None-pre_model_hook-tools0]
  '''
  graph TD;
  	__start__ --> pre_model_hook;
  	pre_model_hook --> agent;
  	agent --> __end__;
  
  '''
# ---
# name: test_react_agent_graph_structure[None-post_structured_response_hook-None-None-pre_model_hook-tools1]
  '''
  graph TD;
  	__start__ --> pre_model_hook;
  	agent -.-> __end__;
  	agent -.-> tools;
  	pre_model_hook --> agent;
  	tools --> pre_model_hook;
  
  '''
# ---
# name: test_react_agent_graph_structure[None-post_structured_response_hook-None-post_model_hook-None-tools0]
  '''
  graph TD;
  	__start__ --> agent;
  	agent --> post_model_hook;
  	post_model_hook --> __end__;
  
  '''
# ---
# name: test_react_agent_graph_structure[None-post_structured_response_hook-None-post_model_hook-None-tools1]
  '''
  graph TD;
  	__start__ --> agent;
  	agent --> post_model_hook;
  	post_model_hook -.-> __end__;
  	post_model_hook -.-> agent;
  	post_model_hook -.-> tools;
  	tools --> agent;
  
  '''
# ---
# name: test_react_agent_graph_structure[None-post_structured_response_hook-None-post_model_hook-pre_model_hook-tools0]
  '''
  graph TD;
  	__start__ --> pre_model_hook;
  	agent --> post_model_hook;
  	pre_model_hook --> agent;
  	post_model_hook --> __end__;
  
  '''
# ---
# name: test_react_agent_graph_structure[None-post_structured_response_hook-None-post_model_hook-pre_model_hook-tools1]
  '''
  graph TD;
  	__start__ --> pre_model_hook;
  	agent --> post_model_hook;
  	post_model_hook -.-> __end__;
  	post_model_hook -.-> pre_model_hook;
  	post_model_hook -.-> tools;
  	pre_model_hook --> agent;
  	tools --> pre_model_hook;
  
  '''
# ---
# name: test_react_agent_graph_structure[None-post_structured_response_hook-pre_structured_response_hook-None-None-tools0]
  '''
  graph TD;
  	__start__ --> agent;
  	agent --> __end__;
  
  '''
# ---
# name: test_react_agent_graph_structure[None-post_structured_response_hook-pre_structured_response_hook-None-None-tools1]
  '''
  graph TD;
  	__start__ --> agent;
  	agent -.-> __end__;
  	agent -.-> tools;
  	tools --> agent;
  
  '''
# ---
# name: test_react_agent_graph_structure[None-post_structured_response_hook-pre_structured_response_hook-None-pre_model_hook-tools0]
  '''
  graph TD;
  	__start__ --> pre_model_hook;
  	pre_model_hook --> agent;
  	agent --> __end__;
  
  '''
# ---
# name: test_react_agent_graph_structure[None-post_structured_response_hook-pre_structured_response_hook-None-pre_model_hook-tools1]
  '''
  graph TD;
  	__start__ --> pre_model_hook;
  	agent -.-> __end__;
  	agent -.-> tools;
  	pre_model_hook --> agent;
  	tools --> pre_model_hook;
  
  '''
# ---
# name: test_react_agent_graph_structure[None-post_structured_response_hook-pre_structured_response_hook-post_model_hook-None-tools0]
  '''
  graph TD;
  	__start__ --> agent;
  	agent --> post_model_hook;
  	post_model_hook --> __end__;
  
  '''
# ---
# name: test_react_agent_graph_structure[None-post_structured_response_hook-pre_structured_response_hook-post_model_hook-None-tools1]
  '''
  graph TD;
  	__start__ --> agent;
  	agent --> post_model_hook;
  	post_model_hook -.-> __end__;
  	post_model_hook -.-> agent;
  	post_model_hook -.-> tools;
  	tools --> agent;
  
  '''
# ---
# name: test_react_agent_graph_structure[None-post_structured_response_hook-pre_structured_response_hook-post_model_hook-pre_model_hook-tools0]
  '''
  graph TD;
  	__start__ --> pre_model_hook;
  	agent --> post_model_hook;
  	pre_model_hook --> agent;
  	post_model_hook --> __end__;
  
  '''
# ---
# name: test_react_agent_graph_structure[None-post_structured_response_hook-pre_structured_response_hook-post_model_hook-pre_model_hook-tools1]
  '''
  graph TD;
  	__start__ --> pre_model_hook;
  	agent --> post_model_hook;
  	post_model_hook -.-> __end__;
  	post_model_hook -.-> pre_model_hook;
  	post_model_hook -.-> tools;
  	pre_model_hook --> agent;
  	tools --> pre_model_hook;
  
  '''
# ---
# name: test_react_agent_graph_structure[ResponseFormat-None-None-None-None-tools0]
  '''
  graph TD;
  	__start__ --> agent;
  	agent --> generate_structured_response;
  	generate_structured_response --> __end__;
  
  '''
# ---
# name: test_react_agent_graph_structure[ResponseFormat-None-None-None-None-tools1]
  '''
  graph TD;
  	__start__ --> agent;
  	agent -.-> generate_structured_response;
  	agent -.-> tools;
  	tools --> agent;
  	generate_structured_response --> __end__;
  
  '''
# ---
# name: test_react_agent_graph_structure[ResponseFormat-None-None-None-pre_model_hook-tools0]
  '''
  graph TD;
  	__start__ --> pre_model_hook;
  	agent --> generate_structured_response;
  	pre_model_hook --> agent;
  	generate_structured_response --> __end__;
  
  '''
# ---
# name: test_react_agent_graph_structure[ResponseFormat-None-None-None-pre_model_hook-tools1]
  '''
  graph TD;
  	__start__ --> pre_model_hook;
  	agent -.-> generate_structured_response;
  	agent -.-> tools;
  	pre_model_hook --> agent;
  	tools --> pre_model_hook;
  	generate_structured_response --> __end__;
  
  '''
# ---
# name: test_react_agent_graph_structure[ResponseFormat-None-None-post_model_hook-None-tools0]
  '''
  graph TD;
  	__start__ --> agent;
  	agent --> post_model_hook;
  	post_model_hook --> generate_structured_response;
  	generate_structured_response --> __end__;
  
  '''
# ---
# name: test_react_agent_graph_structure[ResponseFormat-None-None-post_model_hook-None-tools1]
  '''
  graph TD;
  	__start__ --> agent;
  	agent --> post_model_hook;
  	post_model_hook -.-> agent;
  	post_model_hook -.-> generate_structured_response;
  	post_model_hook -.-> tools;
  	tools --> agent;
  	generate_structured_response --> __end__;
  
  '''
# ---
# name: test_react_agent_graph_structure[ResponseFormat-None-None-post_model_hook-pre_model_hook-tools0]
  '''
  graph TD;
  	__start__ --> pre_model_hook;
  	agent --> post_model_hook;
  	post_model_hook --> generate_structured_response;
  	pre_model_hook --> agent;
  	generate_structured_response --> __end__;
  
  '''
# ---
# name: test_react_agent_graph_structure[ResponseFormat-None-None-post_model_hook-pre_model_hook-tools1]
  '''
  graph TD;
  	__start__ --> pre_model_hook;
  	agent --> post_model_hook;
  	post_model_hook -.-> generate_structured_response;
  	post_model_hook -.-> pre_model_hook;
  	post_model_hook -.-> tools;
  	pre_model_hook --> agent;
  	tools --> pre_model_hook;
  	generate_structured_response --> __end__;
  
  '''
# ---
# name: test_react_agent_graph_structure[ResponseFormat-None-pre_structured_response_hook-None-None-tools0]
  '''
  graph TD;
  	__start__ --> agent;
  	agent --> pre_structured_response_hook;
  	pre_structured_response_hook --> generate_structured_response;
  	generate_structured_response --> __end__;
  
  '''
# ---
# name: test_react_agent_graph_structure[ResponseFormat-None-pre_structured_response_hook-None-None-tools1]
  '''
  graph TD;
  	__start__ --> agent;
  	agent -.-> pre_structured_response_hook;
  	agent -.-> tools;
  	pre_structured_response_hook --> generate_structured_response;
  	tools --> agent;
  	generate_structured_response --> __end__;
  
  '''
# ---
# name: test_react_agent_graph_structure[ResponseFormat-None-pre_structured_response_hook-None-pre_model_hook-tools0]
  '''
  graph TD;
  	__start__ --> pre_model_hook;
  	agent --> pre_structured_response_hook;
  	pre_model_hook --> agent;
  	pre_structured_response_hook --> generate_structured_response;
  	generate_structured_response --> __end__;
  
  '''
# ---
# name: test_react_agent_graph_structure[ResponseFormat-None-pre_structured_response_hook-None-pre_model_hook-tools1]
  '''
  graph TD;
  	__start__ --> pre_model_hook;
  	agent -.-> pre_structured_response_hook;
  	agent -.-> tools;
  	pre_model_hook --> agent;
  	pre_structured_response_hook --> generate_structured_response;
  	tools --> pre_model_hook;
  	generate_structured_response --> __end__;
  
  '''
# ---
# name: test_react_agent_graph_structure[ResponseFormat-None-pre_structured_response_hook-post_model_hook-None-tools0]
  '''
  graph TD;
  	__start__ --> agent;
  	agent --> post_model_hook;
  	post_model_hook --> pre_structured_response_hook;
  	pre_structured_response_hook --> generate_structured_response;
  	generate_structured_response --> __end__;
  
  '''
# ---
# name: test_react_agent_graph_structure[ResponseFormat-None-pre_structured_response_hook-post_model_hook-None-tools1]
  '''
  graph TD;
  	__start__ --> agent;
  	agent --> post_model_hook;
  	post_model_hook -.-> agent;
  	post_model_hook -.-> pre_structured_response_hook;
  	post_model_hook -.-> tools;
  	pre_structured_response_hook --> generate_structured_response;
  	tools --> agent;
  	generate_structured_response --> __end__;
  
  '''
# ---
# name: test_react_agent_graph_structure[ResponseFormat-None-pre_structured_response_hook-post_model_hook-pre_model_hook-tools0]
  '''
  graph TD;
  	__start__ --> pre_model_hook;
  	agent --> post_model_hook;
  	post_model_hook --> pre_structured_response_hook;
  	pre_model_hook --> agent;
  	pre_structured_response_hook --> generate_structured_response;
  	generate_structured_response --> __end__;
  
  '''
# ---
# name: test_react_agent_graph_structure[ResponseFormat-None-pre_structured_response_hook-post_model_hook-pre_model_hook-tools1]
  '''
  graph TD;
  	__start__ --> pre_model_hook;
  	agent --> post_model_hook;
  	post_model_hook -.-> pre_model_hook;
  	post_model_hook -.-> pre_structured_response_hook;
  	post_model_hook -.-> tools;
  	pre_model_hook --> agent;
  	pre_structured_response_hook --> generate_structured_response;
  	tools --> pre_model_hook;
  	generate_structured_response --> __end__;
  
  '''
# ---
# name: test_react_agent_graph_structure[ResponseFormat-post_structured_response_hook-None-None-None-tools0]
  '''
  graph TD;
  	__start__ --> agent;
  	agent --> generate_structured_response;
  	generate_structured_response --> post_structured_response_hook;
  	post_structured_response_hook --> __end__;
  
  '''
# ---
# name: test_react_agent_graph_structure[ResponseFormat-post_structured_response_hook-None-None-None-tools1]
  '''
  graph TD;
  	__start__ --> agent;
  	agent -.-> generate_structured_response;
  	agent -.-> tools;
  	generate_structured_response --> post_structured_response_hook;
  	tools --> agent;
  	post_structured_response_hook --> __end__;
  
  '''
# ---
# name: test_react_agent_graph_structure[ResponseFormat-post_structured_response_hook-None-None-pre_model_hook-tools0]
  '''
  graph TD;
  	__start__ --> pre_model_hook;
  	agent --> generate_structured_response;
  	generate_structured_response --> post_structured_response_hook;
  	pre_model_hook --> agent;
  	post_structured_response_hook --> __end__;
  
  '''
# ---
# name: test_react_agent_graph_structure[ResponseFormat-post_structured_response_hook-None-None-pre_model_hook-tools1]
  '''
  graph TD;
  	__start__ --> pre_model_hook;
  	agent -.-> generate_structured_response;
  	agent -.-> tools;
  	generate_structured_response --> post_structured_response_hook;
  	pre_model_hook --> agent;
  	tools --> pre_model_hook;
  	post_structured_response_hook --> __end__;
  
  '''
# ---
# name: test_react_agent_graph_structure[ResponseFormat-post_structured_response_hook-None-post_model_hook-None-tools0]
  '''
  graph TD;
  	__start__ --> agent;
  	agent --> post_model_hook;
  	generate_structured_response --> post_structured_response_hook;
  	post_model_hook --> generate_structured_response;
  	post_structured_response_hook --> __end__;
  
  '''
# ---
# name: test_react_agent_graph_structure[ResponseFormat-post_structured_response_hook-None-post_model_hook-None-tools1]
  '''
  graph TD;
  	__start__ --> agent;
  	agent --> post_model_hook;
  	generate_structured_response --> post_structured_response_hook;
  	post_model_hook -.-> agent;
  	post_model_hook -.-> generate_structured_response;
  	post_model_hook -.-> tools;
  	tools --> agent;
  	post_structured_response_hook --> __end__;
  
  '''
# ---
# name: test_react_agent_graph_structure[ResponseFormat-post_structured_response_hook-None-post_model_hook-pre_model_hook-tools0]
  '''
  graph TD;
  	__start__ --> pre_model_hook;
  	agent --> post_model_hook;
  	generate_structured_response --> post_structured_response_hook;
  	post_model_hook --> generate_structured_response;
  	pre_model_hook --> agent;
  	post_structured_response_hook --> __end__;
  
  '''
# ---
# name: test_react_agent_graph_structure[ResponseFormat-post_structured_response_hook-None-post_model_hook-pre_model_hook-tools1]
  '''
  graph TD;
  	__start__ --> pre_model_hook;
  	agent --> post_model_hook;
  	generate_structured_response --> post_structured_response_hook;
  	post_model_hook -.-> generate_structured_response;
  	post_model_hook -.-> pre_model_hook;
  	post_model_hook -.-> tools;
  	pre_model_hook --> agent;
  	tools --> pre_model_hook;
  	post_structured_response_hook --> __end__;
  
  '''
# ---
# name: test_react_agent_graph_structure[ResponseFormat-post_structured_response_hook-pre_structured_response_hook-None-None-tools0]
  '''
  graph TD;
  	__start__ --> agent;
  	agent --> pre_structured_response_hook;
  	generate_structured_response --> post_structured_response_hook;
  	pre_structured_response_hook --> generate_structured_response;
  	post_structured_response_hook --> __end__;
  
  '''
# ---
# name: test_react_agent_graph_structure[ResponseFormat-post_structured_response_hook-pre_structured_response_hook-None-None-tools1]
  '''
  graph TD;
  	__start__ --> agent;
  	agent -.-> pre_structured_response_hook;
  	agent -.-> tools;
  	generate_structured_response --> post_structured_response_hook;
  	pre_structured_response_hook --> generate_structured_response;
  	tools --> agent;
  	post_structured_response_hook --> __end__;
  
  '''
# ---
# name: test_react_agent_graph_structure[ResponseFormat-post_structured_response_hook-pre_structured_response_hook-None-pre_model_hook-tools0]
  '''
  graph TD;
  	__start__ --> pre_model_hook;
  	agent --> pre_structured_response_hook;
  	generate_structured_response --> post_structured_response_hook;
  	pre_model_hook --> agent;
  	pre_structured_response_hook --> generate_structured_response;
  	post_structured_response_hook --> __end__;
  
  '''
# ---
# name: test_react_agent_graph_structure[ResponseFormat-post_structured_response_hook-pre_structured_response_hook-None-pre_model_hook-tools1]
  '''
  graph TD;
  	__start__ --> pre_model_hook;
  	agent -.-> pre_structured_response_hook;
  	agent -.-> tools;
  	generate_structured_response --> post_structured_response_hook;
  	pre_model_hook --> agent;
  	pre_structured_response_hook --> generate_structured_response;
  	tools --> pre_model_hook;
  	post_structured_response_hook --> __end__;
  
  '''
# ---
# name: test_react_agent_graph_structure[ResponseFormat-post_structured_response_hook-pre_structured_response_hook-post_model_hook-None-tools0]
  '''
  graph TD;
  	__start__ --> agent;
  	agent --> post_model_hook;
  	generate_structured_response --> post_structured_response_hook;
  	post_model_hook --> pre_structured_response_hook;
  	pre_structured_response_hook --> generate_structured_response;
  	post_structured_response_hook --> __end__;
  
  '''
# ---
# name: test_react_agent_graph_structure[ResponseFormat-post_structured_response_hook-pre_structured_response_hook-post_model_hook-None-tools1]
  '''
  graph TD;
  	__start__ --> agent;
  	agent --> post_model_hook;
  	generate_structured_response --> post_structured_response_hook;
  	post_model_hook -.-> agent;
  	post_model_hook -.-> pre_structured_response_hook;
  	post_model_hook -.-> tools;
  	pre_structured_response_hook --> generate_structured_response;
  	tools --> agent;
  	post_structured_response_hook --> __end__;
  
  '''
# ---
# name: test_react_agent_graph_structure[ResponseFormat-post_structured_response_hook-pre_structured_response_hook-post_model_hook-pre_model_hook-tools0]
  '''
  graph TD;
  	__start__ --> pre_model_hook;
  	agent --> post_model_hook;
  	generate_structured_response --> post_structured_response_hook;
  	post_model_hook --> pre_structured_response_hook;
  	pre_model_hook --> agent;
  	pre_structured_response_hook --> generate_structured_response;
  	post_structured_response_hook --> __end__;
  
  '''
# ---
# name: test_react_agent_graph_structure[ResponseFormat-post_structured_response_hook-pre_structured_response_hook-post_model_hook-pre_model_hook-tools1]
  '''
  graph TD;
  	__start__ --> pre_model_hook;
  	agent --> post_model_hook;
  	generate_structured_response --> post_structured_response_hook;
  	post_model_hook -.-> pre_model_hook;
  	post_model_hook -.-> pre_structured_response_hook;
  	post_model_hook -.-> tools;
  	pre_model_hook --> agent;
  	pre_structured_response_hook --> generate_structured_response;
  	tools --> pre_model_hook;
  	post_structured_response_hook --> __end__;
  
  '''
# ---
